--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -27,4 +27,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/micro-mockba-scalping:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/micro-mockba-binance-futures-bot:latest
