--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,20 @@ aiodns==3.5.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.1
 aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
 base58==2.1.1
+beautifulsoup4==4.14.2
 ccxt==4.5.11
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 cryptography==46.0.3
 dateparser==1.2.2
+deep-translator==1.11.4
 frozenlist==1.8.0
 h11==0.16.0
 httpcore==1.0.9
@@ -25,10 +30,12 @@ psycopg2-binary==2.9.11
 pycares==4.11.0
 pycparser==2.23
 pycryptodome==3.23.0
+pydantic_core==2.41.5
 pyTelegramBotAPI==4.29.1
 python-binance==1.0.30
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-multipart==0.0.20
 pytz==2025.2
 redis==6.4.0
 regex==2025.9.18
@@ -36,6 +43,9 @@ requests==2.32.5
 setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
+starlette==0.50.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 tzlocal==5.3.1
