--- a/docker-compose-mockba-binance.yml
+++ b/docker-compose-mockba-binance.yml
@@ -10,15 +10,15 @@ services:
       - .env
     volumes:
       - ./.env:/app/.env
-      - ./llm_prompt_template.txt:/app/futures_perps/trade/apolo/llm_prompt_template.txt
+      - ./llm_prompt_template.txt:/app/futures_perps/trade/binance/llm_prompt_template.txt
     depends_on:
-      - redis-apolo
+      - redis-binance
     networks:
       - mockba-binance-net
 
   watchtower:
     image: containrrr/watchtower
-    container_name: watchtower-apolo
+    container_name: watchtower-binance
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -30,19 +30,19 @@ services:
     networks:
       - mockba-binance-net
 
-  redis-apolo:
+  redis-binance:
     image: redis:latest
-    container_name: redis-mockba-apolo
+    container_name: redis-mockba-binance
     restart: always
     ports:
       - "6392:6379"
     volumes:
-      - redis_apolo_data:/data
+      - redis_binance_data:/data
     networks:
       - mockba-binance-net
 
 volumes:
-  redis_apolo_data:
+  redis_binance_data:
 
 networks:
   mockba-binance-net:
